<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eight Ball</string>
    <string name="error_occur">An error has occurred</string>

    <!--Settings-->
    <string name="category">Category</string>
    <string name="new_category">new category</string>
    <string name="new_category_name">new category name</string>
    <string name="category_exists">category exists</string>
    <string name="new_item_name">new item name</string>
    <string name="item_exists">item exists</string>
    <string name="can_not_delete">can\'t delete this item</string>
    <string name="delete">confirm to delete %s?</string>
    <string name="add">Add</string>
    <string name="empty">Empty</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--About-->
    <string name="about">About</string>
    <string name="developer">Developed by i605</string>
    <string name="update">Update:</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <!--Fortune Telling-->
    <string name="think_and_give_it_a_shake">think about a question \n and \n give it a shake</string>
    <string name="fortune_telling">Fortune Telling</string>
    <string-array name="fortune_telling">
        <item>It is certain</item>
        <item>It is decidedly so</item>
        <item>Without a doubt</item>
        <item>Yes, definitely</item>
        <item>You may rely on it</item>
        <item>As I see it, yes</item>
        <item>Most likely</item>
        <item>Outlook good</item>
        <item>Yes</item>
        <item>Signs point to yes</item>
        <item>Reply hazy, try again</item>
        <item>Ask again later</item>
        <item>Better not tell you now</item>
        <item>Cannot predict now</item>
        <item>Concentrate and ask again</item>
        <item>Don\'t count on it</item>
        <item>My reply is no</item>
        <item>My sources say no</item>
        <item>Outlook not so good</item>
        <item>Very doubtful</item>
    </string-array>

    <!--Food-->
    <string name="give_it_a_shake">give it a shake</string>
    <string name="what_to_eat">What to Eat</string>
    <string-array name="what_to_eat" tools:ignore="InconsistentArrays">
        <item>Bread</item>
        <item>Chicken</item>
        <item>Corn flakes</item>
        <item>Doughnut</item>
        <item>Garden salad</item>
        <item>Hamburger</item>
        <item>Italian</item>
        <item>Pancakes</item>
        <item>Pizza</item>
        <item>Potato salad</item>
        <item>Ribs</item>
        <item>Sandwich</item>
    </string-array>
</resources>